2004-08-14 Alain Magloire

	Fix for 71992.
	* src/org/eclipse/cdt/debug/mi/core/GDBTypeParser.java

2004-08-05 Alain Magloire

	Tentative Fix for PR 69991
	* src/org/eclipse/cdt/debug/mi/core/RxThread.java

2004-07-22 Alain Magloire

	fix for PR 70688
	* src/org/eclipse/cdt/debug/mi/core/GDBTypeParser.java

2004-06-24 Alain Magloire

	Fix 68226, the stackinfodepth was call in
	the wrong thread.  Fix by selecting the thread earlier.

	* cdi/org/eclipse/cdt/debug/mic/core/cdi/EventManager.java
	
2004-05-31 Alain Magloire
	Fix for PR 58249
		GDB has special "types"
		int8_t int16_t etc ... parse them also.
 
	Fix to PR 60020.
		GDB returns the children when a pointer
		points to a structure.
		Also ignore the keyword "const" when parsing.
 
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/SourceManager.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/type/ArrayValue.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/Register.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/RegisterObject.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/Variable.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/VariableObject.java
	* src/org/eclipse/cdt/debug/mi/core/GDBTypeParser.java

2004-03-23 Alain Magloire

	Fix for bug 55766: The Shared Libraries view displays the wrong icon if the "Load Symbols" action fails.

	* src/org/eclipse/cdt/debug/mi/core/cdi/SharedLibraryManager.java
	
2004-02-19 Alain Magloire
	
	PR 52317
	The children were added in the wrong order.

	* src/org/eclipse/cdt/debug/mi/core/GDBTypeParser.java

2004-02-11 Alain Magloire

	Use String.endsWith("(gdb)") to detect the prompt.
	Sometimes gdb does not flush the endline.

	* src/org/eclipse/cdt/debug/mi/core/MIPlugin.java

2004-01-29 Alain Magloire

	CDT Debug UI prefers things to be in ascending number.
	It makes life easier ... we comply

	* src/org/eclipse/cdt/debug/mi/core/output/MIInfoThreadsInfo.java

2004-01-28 Alain Magloire

	Some clients using MI need to have access to thoes